--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Homepage</h1>
     <a href="https://www.theodinproject.com/about">Click me</a>
+    <a href="Pages/about.html">About</a>
 </body>
 </html>
