--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Homepage</h1>
     <a href="https://www.theodinproject.com/about">Click me</a>
-    <a href="Pages/about.html">About</a>
+    <a href="./Pages/about.html">About</a>
+    <img src="./Images/dog.jpg">
 </body>
 </html>
