--- a/odin-links-and-images/Pages/about.html
+++ b/odin-links-and-images/Pages/about.html
@@ -6,6 +6,8 @@
   </head>
 
   <body>
+    <a href="../index.html">Back to homepage</a>
     <h1>About Page</h1>
+    <img src="../images/dog.jpg">
   </body>
 </html>
