Edit index.html and about.html

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -8,6 +8,7 @@
     <h1>Homepage</h1>
     <a href="https://www.theodinproject.com/about">Click me</a>
     <a href="./Pages/about.html">About</a>
-    <img src="./Images/dog.jpg">
+    <br>
+    <img src="./Images/dog.jpg" alt="picture of a dog with a scarf">
 </body>
 </html>
