--- a/odin-links-and-images/Pages/about.html
+++ b/odin-links-and-images/Pages/about.html
@@ -8,6 +8,6 @@
   <body>
     <a href="../index.html">Back to homepage</a>
     <h1>About Page</h1>
-    <img src="../images/dog.jpg">
+    <img src="../images/dog.jpg" alt="picture of a dog with a scarf">
   </body>
 </html>
