Fix capitalisation in alt-text of dog.jpg
Changed the sentence in alt-text of dog.jpg to include
capitalization.

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -9,6 +9,6 @@
     <a href="https://www.theodinproject.com/about">Click me</a>
     <a href="./Pages/about.html">About</a>
     <br>
-    <img src="./Images/dog.jpg" alt="picture of a dog with a scarf">
+    <img src="./Images/dog.jpg" alt="Picture of a dog with a scarf">
 </body>
 </html>
